allow access to certificate provisioning

--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -13,6 +13,7 @@ access_control:
       policy: bypass
       resources:
         - "^/v1([/?].*)?$"
+        - "^/.well-known([/?].*)?$"
 
     - domain: media.castelnuovo.xyz
       policy: bypass
