authelia with ldap

--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -2,7 +2,6 @@
 access_control:
   default_policy: deny
   rules:
-
     - domain: authelia.castelnuovo.xyz
       policy: bypass
 
@@ -20,7 +19,7 @@ access_control:
 
     - domain: "*.castelnuovo.xyz"
       # subject:
-        # - "group:admins"
+      # - "group:admins"
       policy: two_factor
 
 theme: dark
@@ -40,12 +39,35 @@ webauthn:
   display_name: authelia.castelnuovo.xyz
 
 authentication_backend:
-  disable_reset_password: false
-  file:
-    path: /config/users_database.yml
-    password:
-      memory: 1024
-      parallelism: 8
+  password_reset:
+    disable: false
+    custom_url: "https://ldap.castelnuovo.xyz/reset-password/step1"
+  refresh_interval: 1m
+  ldap:
+    implementation: custom
+    url: ldap://ldap:389
+    timeout: 5s
+    start_tls: false
+    #tls:
+    #  skip_verify: false
+    #  minimum_version: TLS1.2
+    base_dn: dc=castelnuovo,dc=xyz
+    username_attribute: uid
+    additional_users_dn: ou=people
+    # To allow sign in both with username and email, one can use a filter like
+    # (&(|({username_attribute}={input})({mail_attribute}={input}))(objectClass=person))
+    users_filter: (&({username_attribute}={input})(objectClass=person))
+    additional_groups_dn: ou=groups
+    groups_filter: (member={dn})
+    group_name_attribute: cn
+    mail_attribute: mail
+    display_name_attribute: displayName
+    user: uid=admin,ou=people,dc=castelnuovo,dc=xyz
+  # file:
+  #   path: /config/users_database.yml
+  #   password:
+  #     memory: 1024
+  #     parallelism: 8
 
 session:
   name: authelia_session
