--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       AUTHELIA_SESSION_SECRET: ${AUTHELIA_SESSION_SECRET:?error}
       AUTHELIA_STORAGE_ENCRYPTION_KEY: ${AUTHELIA_STORAGE_ENCRYPTION_KEY:?error}
       AUTHELIA_NOTIFIER_SMTP_PASSWORD: ${AUTHELIA_NOTIFIER_SMTP_PASSWORD:?error}
+      AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ${AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD:?error}
 
 networks:
   traefik-proxy:
