--- a/authelia/.env.example
+++ b/authelia/.env.example
@@ -3,3 +3,4 @@ AUTHELIA_JWT_SECRET=
 AUTHELIA_SESSION_SECRET=
 AUTHELIA_STORAGE_ENCRYPTION_KEY=
 AUTHELIA_NOTIFIER_SMTP_PASSWORD=
+AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD=
