--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -54,20 +54,13 @@ authentication_backend:
     base_dn: dc=castelnuovo,dc=xyz
     username_attribute: uid
     additional_users_dn: ou=people
-    # To allow sign in both with username and email, one can use a filter like
-    # (&(|({username_attribute}={input})({mail_attribute}={input}))(objectClass=person))
-    users_filter: (&({username_attribute}={input})(objectClass=person))
+    users_filter: (&(|({username_attribute}={input})({mail_attribute}={input}))(objectClass=person))
     additional_groups_dn: ou=groups
     groups_filter: (member={dn})
     group_name_attribute: cn
     mail_attribute: mail
     display_name_attribute: displayName
     user: uid=admin,ou=people,dc=castelnuovo,dc=xyz
-  # file:
-  #   path: /config/users_database.yml
-  #   password:
-  #     memory: 1024
-  #     parallelism: 8
 
 session:
   name: authelia_session
