--- a/lldap/data/lldap_config.toml
+++ b/lldap/data/lldap_config.toml
@@ -98,13 +98,13 @@ key_file = "/data/private_key"
     ## Whether to enabled password reset via email, from LLDAP.
     enable_password_reset=true
     ## The SMTP server.
-    server="ip.castelnuovo.xyz"
+    server="email.local.castelnuovo.xyz"
     ## The SMTP port.
-    port=587
+    port=25
     ## Whether to connect with TLS.
     tls_required=true
     ## The SMTP user, usually your email address.
-    user="ldap@castelnuovo.xyz"
+    user="ldap@email.castelnuovo.xyz"
     ## The SMTP password.
     #password="password"
     ## The header field, optional: how the sender appears in the email. The first
