--- a/plausible/docker-compose.yml
+++ b/plausible/docker-compose.yml
@@ -47,8 +47,7 @@ services:
         soft: 262144
         hard: 262144
 
-volumes:
-  db-data:
-    driver: local
-  event-data:
-    driver: local
+networks:
+  traefik-proxy:
+    driver: bridge
+    external: true
