--- a/plausible/.env.example
+++ b/plausible/.env.example
@@ -1,3 +1,4 @@
+BASE_URL=http://localhost:8000
 SECRET_KEY_BASE=# openssl rand -base64 64 | tr -d '\n' ; echo
 DATABASE_URL=postgres://user:password@postgres/stats_db
 SMTP_USER_PWD=
