--- a/plausible/docker-compose.yml
+++ b/plausible/docker-compose.yml
@@ -1,6 +1,20 @@
-version: "3.3"
+version: "3"
 
 services:
+  stats_events:
+    image: yandex/clickhouse-server:21.3.2.5
+    restart: always
+    networks:
+      - stats_internal
+    volumes:
+      - ./data:/var/lib/clickhouse
+      - ./clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
+      - ./clickhouse-user.xml:/etc/clickhouse-server/users.d/logging.xml:ro
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
   stats:
     image: plausible/analytics:latest
     container_name: stats
@@ -8,46 +22,27 @@ services:
     security_opt:
       - no-new-privileges:true
     networks:
+      - stats_internal
       - traefik-proxy
     labels:
       traefik.enable: true
       traefik.http.routers.stats.entrypoints: https
       traefik.http.services.stats.loadbalancer.server.port: 8000
     environment:
-      BASE_URL: https://stats.castelnuovo.xyz
+      BASE_URL: ${BASE_URL:?error}
       SECRET_KEY_BASE: ${SECRET_KEY_BASE:?error}
       DATABASE_URL: ${DATABASE_URL:?error}
-      DISABLE_AUTH: true
-      DISABLE_REGISTRATION: true
-      MAILER_EMAIL: stats@email.castelnuovo.xyz
-      SMTP_HOST_ADDR: email.local.castelnuovo.xyz
-      SMTP_USER_NAME: castelnuovo/production
-      SMTP_USER_PWD: ${SMTP_USER_PWD:?error}
+      CLICKHOUSE_DATABASE_URL: http://stats_events:8123/plausible_events_db
+      DISABLE_AUTH: "true"
+      DISABLE_REGISTRATION: "true"
       ADMIN_USER_EMAIL: luca@castelnuovo.xyz
       ADMIN_USER_NAME: Luca Castelnuovo
       ADMIN_USER_PWD: ${ADMIN_USER_PWD:?error}
-    depends_on:
-      - stats_mail
-      - stats_events
-    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
-
-  stats_mail:
-    image: bytemark/smtp
-    restart: always
-
-  stats_events:
-    image: yandex/clickhouse-server:21.3.2.5
-    restart: always
-    volumes:
-      - ./data:/var/lib/clickhouse
-      - ./clickhouse-config.xml:/etc/clickhouse-server/config.d/logging.xml:ro
-      - ./clickhouse-user-config.xml:/etc/clickhouse-server/users.d/logging.xml:ro
-    ulimits:
-      nofile:
-        soft: 262144
-        hard: 262144
+    command: sh -c "/entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
 
 networks:
   traefik-proxy:
     driver: bridge
     external: true
+  stats_internal:
+    external: false
