Add mailer config

--- a/plausible/docker-compose.yml
+++ b/plausible/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "3"
 
 services:
+  mail:
+    image: bytemark/smtp
+    restart: always
+    networks:
+      - stats_internal
+
   stats_events:
     image: yandex/clickhouse-server:21.3.2.5
     restart: always
@@ -38,6 +44,9 @@ services:
       ADMIN_USER_EMAIL: luca@castelnuovo.xyz
       ADMIN_USER_NAME: Luca Castelnuovo
       ADMIN_USER_PWD: ${ADMIN_USER_PWD:?error}
+      SMTP_HOST_ADDR: email.local.castelnuovo.xyz
+      SMTP_USER_NAME: castelnuovo/production
+      SMTP_USER_PWD: ${SMTP_USER_PWD:?error}
     command: sh -c "/entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
 
 networks:
