make stats links accessible

--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -18,6 +18,7 @@ access_control:
       resources:
         - "^/api([/?].*)?$"
         - "^/js([/?].*)?$"
+        - "^/share([/?].*)?$"
 
     - domain:
         - proxmox.castelnuovo.xyz
