--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -19,6 +19,7 @@ access_control:
         - "^/api([/?].*)?$"
         - "^/js([/?].*)?$"
         - "^/css([/?].*)?$"
+        - "^/images([/?].*)?$"
         - "^/share([/?].*)?$"
 
     - domain:
