--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -90,12 +90,8 @@ regulation:
   ban_time: 12h
 
 storage:
-  mysql:
-    host: mariadb
-    port: 3306
-    database: db_authelia
-    username: db_authelia
-    timeout: 5s
+  local:
+    path: /config/db.sqlite3
 
 notifier:
   disable_startup_check: true
