--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     labels:
       traefik.enable: true
       traefik.http.routers.teleport.entryPoints: https
-      # traefik.http.services.teleport.loadbalancer.server.port: 9000
+      traefik.http.services.teleport.loadbalancer.server.port: 8443
     volumes:
       - ./config:/etc/teleport
       - ./data:/var/lib/teleport
