--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -7,6 +7,7 @@ access_control:
         - authelia.castelnuovo.xyz
         - s3.castelnuovo.xyz
         - s3-console.castelnuovo.xyz
+        - teleport.castelnuovo.xyz
       policy: bypass
 
     - domain: email.castelnuovo.xyz
