--- a/teleport/config/teleport.yaml
+++ b/teleport/config/teleport.yaml
@@ -13,13 +13,13 @@ teleport:
 
 auth_service:
   enabled: "yes"
-  # listen_addr: 0.0.0.0:3025
-  cluster_name: teleport.castelnuovo.xyz
-  # public_addr: ip.castlenuovo.xyz:3025
+  # cluster_name: teleport.castelnuovo.xyz
+  public_addr: ip.castlenuovo.xyz:3025
   # proxy_listener_mode: multiplex
 
 ssh_service:
   enabled: "yes"
+  public_addr: ip.castelnuovo.xyz:3022
   commands:
     - name: hostname
       command: [hostname]
@@ -29,7 +29,6 @@ ssh_service:
 
 proxy_service:
   enabled: "yes"
-  # listen_addr: 0.0.0.0:3023
   # web_listen_addr: 0.0.0.0:3080
   public_addr: teleport.castelnuovo.xyz:443
   ssh_public_addr: ip.castelnuovo.xyz:3023
