--- a/teleport/config/teleport.yaml
+++ b/teleport/config/teleport.yaml
@@ -1,4 +1,4 @@
-version: v2
+version: v1
 
 teleport:
   nodename: teleport
@@ -13,7 +13,7 @@ teleport:
 
 auth_service:
   enabled: "yes"
-  # cluster_name: teleport.castelnuovo.xyz
+  cluster_name: teleport.castelnuovo.xyz
   public_addr: ip.castlenuovo.xyz:3025
   # proxy_listener_mode: multiplex
 
@@ -29,7 +29,6 @@ ssh_service:
 
 proxy_service:
   enabled: "yes"
-  # web_listen_addr: 0.0.0.0:3080
   public_addr: teleport.castelnuovo.xyz:443
   ssh_public_addr: ip.castelnuovo.xyz:3023
   tunnel_public_addr: ip.castelnuovo.xyz:3024
