--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ./config:/etc/teleport
       - ./data:/var/lib/teleport
+      - ./certs:/mnt/shared/certs
     ports:
       - 3022:3022
       - 3023:3023
