--- a/lldap/data/lldap_config.toml
+++ b/lldap/data/lldap_config.toml
@@ -15,7 +15,7 @@ ldap_port = 389
 #http_port = 17170
 
 ## The public URL of the server, for password reset links.
-http_url = "https://ldap.castelnuovo.xyz"
+http_url = "https://ldap.castelnuovo.dev"
 
 ## Random secret for JWT signature.
 ## This secret should be random, and should be shared with application
@@ -110,7 +110,7 @@ key_file = "/data/private_key"
     #password="password"
     ## The header field, optional: how the sender appears in the email. The first
     ## is a free-form name, followed by an email between <>.
-    from="ldap <ldap@email.castelnuovo.xyz>"
+    from="ldap <ldap@email.castelnuovo.dev>"
     ## Same for reply-to, optional.
     #reply_to="Do not reply <noreply@localhost>"
 
