--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -13,19 +13,19 @@ services:
       traefik.enable: true
 
       traefik.http.routers.s3.entrypoints: https
-      traefik.http.routers.s3.rule: Host(`s3.castelnuovo.xyz`)
+      traefik.http.routers.s3.rule: Host(`s3.castelnuovo.dev`)
       traefik.http.routers.s3.service: s3
       traefik.http.services.s3.loadbalancer.server.port: 9000
 
       traefik.http.routers.s3-console.entrypoints: https
-      traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.xyz`)
+      traefik.http.routers.s3-console.rule: Host(`s3-console.castelnuovo.dev`)
       traefik.http.routers.s3-console.service: s3-console
       traefik.http.services.s3-console.loadbalancer.server.port: 9001
     environment:
       MINIO_ROOT_USER: admin
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?error}
-      MINIO_SERVER_URL: https://s3.castelnuovo.xyz
-      MINIO_BROWSER_REDIRECT_URL: https://s3-console.castelnuovo.xyz
+      MINIO_SERVER_URL: https://s3.castelnuovo.dev
+      MINIO_BROWSER_REDIRECT_URL: https://s3-console.castelnuovo.dev
     volumes:
       - ./data:/data
     command: server /data --console-address ":9001"
