--- a/traefik/config.yml
+++ b/traefik/config.yml
@@ -3,48 +3,48 @@ http:
     proxmox:
       entryPoints:
         - https
-      rule: "Host(`proxmox.castelnuovo.xyz`)"
+      rule: "Host(`proxmox.castelnuovo.dev`)"
       service: proxmox
 
     email:
       entryPoints:
         - https
-      rule: "Host(`email.castelnuovo.xyz`)"
+      rule: "Host(`email.castelnuovo.dev`)"
       service: email
 
     email-rp:
       entryPoints:
         - https
-      rule: "Host(`rp.email.castelnuovo.xyz`)"
+      rule: "Host(`rp.email.castelnuovo.dev`)"
       service: email
 
     teleport:
       entryPoints:
         - https
-      rule: "Host(`*.teleport.castelnuovo.xyz`)"
+      rule: "Host(`*.teleport.castelnuovo.dev`)"
       service: teleport
 
   services:
     proxmox:
       loadBalancer:
         servers:
-          - url: https://teresa.local.castelnuovo.xyz:8006
+          - url: https://teresa.local.castelnuovo.dev:8006
 
     email:
       loadBalancer:
         servers:
-          - url: http://email.local.castelnuovo.xyz:5000
+          - url: http://email.local.castelnuovo.dev:5000
 
     teleport:
       loadBalancer:
         servers:
-          - url: https://docker.local.castelnuovo.xyz:3080
+          - url: https://docker.local.castelnuovo.dev:3080
 
   middlewares:
     # Authelia guard
     auth:
       forwardauth:
-        address: http://authelia:9091/api/verify?rd=https://authelia.castelnuovo.xyz/
+        address: http://authelia:9091/api/verify?rd=https://authelia.castelnuovo.dev/
         trustForwardHeader: true
         authResponseHeaders:
           - Remote-User
