--- a/plausible/docker-compose.yml
+++ b/plausible/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       ADMIN_USER_NAME: Luca Castelnuovo
       ADMIN_USER_PWD: ${ADMIN_USER_PWD:?error}
       MAILER_EMAIL: stats@email.castelnuovo.dev
-      SMTP_HOST_ADDR: email.local.castelnuovo.dev
+      SMTP_HOST_ADDR: email.local.castelnuovo.xyz
       SMTP_USER_NAME: castelnuovo/production
       SMTP_USER_PWD: ${SMTP_USER_PWD:?error}
     command: sh -c "/entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
