--- a/teleport/config/teleport.yaml
+++ b/teleport/config/teleport.yaml
@@ -2,7 +2,7 @@ version: v1
 # version: v2
 
 teleport:
-  nodename: teleport.castelnuovo.xyz
+  nodename: teleport.castelnuovo.dev
   data_dir: /var/lib/teleport
   log:
     output: stderr
@@ -14,8 +14,8 @@ teleport:
 
 auth_service:
   enabled: "yes"
-  cluster_name: teleport.castelnuovo.xyz
-  public_addr: teleport.castlenuovo.xyz:3025
+  cluster_name: teleport.castelnuovo.dev
+  public_addr: teleport.castlenuovo.dev:3025
   proxy_listener_mode: separate
   # proxy_listener_mode: multiplex
 
@@ -30,4 +30,4 @@ proxy_service:
   enabled: "yes"
   acme: {}
   https_keypairs: []
-  public_addr: teleport.castelnuovo.xyz:443
+  public_addr: teleport.castelnuovo.dev:443
