--- a/lldap/data/lldap_config.toml
+++ b/lldap/data/lldap_config.toml
@@ -99,7 +99,7 @@ key_file = "/data/private_key"
     ## Whether to enabled password reset via email, from LLDAP.
     enable_password_reset=true
     ## The SMTP server.
-    server="email"
+    server="mx.email.castelnuovo.dev"
     ## The SMTP port.
     port=25
     ## Whether to connect with TLS.
