--- a/authelia/configuration.yml
+++ b/authelia/configuration.yml
@@ -5,9 +5,9 @@ access_control:
     - domain:
         - castelnuovo.dev
         - authelia.castelnuovo.dev
+        - teleport.castelnuovo.dev
         - s3.castelnuovo.dev
         - s3-console.castelnuovo.dev
-        - teleport.castelnuovo.dev
       policy: bypass
 
     - domain: email.castelnuovo.dev
@@ -33,9 +33,11 @@ access_control:
       policy: one_factor
       # policy: two_factor
 
+    - domain:
+      - 2fa.castelnuovo.dev
+    policy: two_factor
+
     - domain: "*.castelnuovo.dev"
-      # subject:
-      # - "group:admins"
       policy: one_factor
 
 theme: dark
